# pytypopo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: hooks.json  settings.json  settings.local.json
.claude/agents/: brotest.md  developer.md  librarian.md  linter-fixer.md  tester.md
.claude/commands/: fix-linters.md
.claude/skills/release/: SKILL.md
.claude/skills/sync-with-upstream/: SKILL.md
.github/workflows/: ci.yml
cross-test/: README.md  python_bridge.py  run-cross-tests.sh  show-failures.sh
cross-test/js-adapter/: package-lock.json  package.json  test-utils-python.js  vitest.config.js
docs/plans/: 2026-01-22-cross-test-parity.md
src/pytypopo/: __init__.py  const.py
src/pytypopo/locale/: __init__.py  base.py
src/pytypopo/modules/punctuation/: __init__.py  dash.py  double_quotes.py  ellipsis.py  period.py  single_quotes.py
src/pytypopo/modules/symbols/: __init__.py  copyrights.py  exponents.py  marks.py  multiplication_sign.py  number_sign.py  numero_sign.py  plus_minus.py  section_sign.py
src/pytypopo/modules/whitespace/: __init__.py  lines.py  nbsp.py  spaces.py
src/pytypopo/modules/words/: __init__.py  abbreviations.py  case.py  exceptions.py  pub_id.py
src/pytypopo/utils/: markdown.py  regex_overlap.py
tests/: conftest.py  test_idempotency.py  test_integration.py  test_locale.py
tests/locale/: test_single_quote_close.py
tests/punctuation/: test_dash.py  test_double_quotes.py  test_double_quotes_markdown.py  test_ellipsis.py  test_period.py  test_single_quotes.py
tests/symbols/: conftest.py  test_copyrights.py  test_exponents.py  test_marks.py  test_multiplication_sign.py  test_number_sign.py  test_numero_sign.py  test_plus_minus.py  test_section_sign.py  test_symbol_utils.py
tests/utils/: test_markdown.py  test_regex_overlap.py
tests/whitespace/: test_lines.py  test_nbsp.py  test_nbsp_regnal.py  test_spaces.py
tests/words/: test_abbreviations.py  test_case.py  test_exceptions.py  test_pub_id.py
